--- a/public/collapse.html
+++ b/public/collapse.html
@@ -6,7 +6,7 @@
     <meta content="IE=edge" http-equiv="X-UA-Compatible">
     <meta name="keywords">
     <meta name="description">
-    <title>Citizens Advice style guide - Callouts
+    <title>Citizens Advice style guide - Collapse
     </title>
     <!-- Mobile Specific Metas-->
     <meta content="width=device-width, initial-scale=1, maximum-scale=2.0" name="viewport">
@@ -38,7 +38,7 @@
     </header>
     <div class="main-container">
       <nav class="main-breadcrumb">
-        <div class="main-breadcrumb__content"><span class="breadcrumb__item"><a href="index.html" title="Home">Home</a><i class="icon-guillemet-right"></i></span><span class="breadcrumb__item">Callouts</span>
+        <div class="main-breadcrumb__content"><span class="breadcrumb__item"><a href="index.html" title="Home">Home</a><i class="icon-guillemet-right"></i></span><span class="breadcrumb__item"><a href="index.html#molecules" title="Molecules">Molecules</a><i class="icon-guillemet-right"></i></span><span class="breadcrumb__item">Collapse</span>
         </div>
       </nav>
       <aside class="section-notice">
@@ -49,55 +49,103 @@
       </aside>
       <div class="main-content">
         <div class="title">
-          <h1 class="title__heading js-ref"><span class="title__title">Callouts</span></h1>
+          <h1 class="title__heading js-ref"><span class="title__title">Collapse</span></h1>
         </div>
-        <div class="articleContent">
-          <div class="col-sm-8">
-            <div class="collapse collapsible">
-              <div class="collapse-toggle">
-                <h2><code>div.collapse</code></h2>
-                <p><code>div.collapse-toggle</code> can also contain <code>h</code> and <code>p</code> tags.</p>
-              </div>
-              <div class="collapse-content">
-                <p>Collapse structure wrapped inside <code>div.collapse.collapsible</code></p></p><a class="collapse-toggle-close"><code>a.collapse-toggle-close</code></a>
-              </div>
-            </div>
-            <div class="collapse collapsible--aqua">
-              <div class="collapse-toggle">
-                <Unstyled>content inside <code>div.collapse-toggle</code></Unstyled>
-              </div>
-              <div class="collapse-content">
-                <p>Collapse structure wrapped inside <code>div.collapse.collapsible--aqua</code></p><a class="collapse-toggle-close"><code>a.collapse-toggle-close</code></a>
-              </div>
-              <div class="collapse-toggle">
-                <p>two</p>
-                <p>paragraphs</p>
-              </div>
-              <div class="collapse-content">
-                <p>Collapse structure wrapped inside <code>div.collapse.collapsible--aqua</code></p><a class="collapse-toggle-close"><code>a.collapse-toggle-close</code></a>
+        <div class="articleContent row">
+          <div class="span8">
+            <div class="example-box-plain">
+              <div class="collapse collapsible">
+                <div class="collapse-toggle">Unstyled content inside header/toggle</div>
+                <div class="collapse-content">
+                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In malesuada mattis euismod. In varius nisl vel ex eleifend, eget pellentesque sem feugiat. Ut tristique, augue eget pellentesque rutrum, justo nunc convallis leo, tempor rhoncus lacus metus efficitur odio. Phasellus metus erat, condimentum sit amet leo ac, viverra consectetur lorem.</p><a class="collapse-toggle-close">Close button</a>
+                </div>
               </div>
             </div>
-            <div class="collapse collapsible--green">
-              <div class="collapse-toggle">
-                <Unstyled>content inside <code>div.collapse-toggle</code></Unstyled>
-              </div>
-              <div class="collapse-content">
-                <p>Collapse structure wrapped inside <code>div.collapse.collapsible--green</code></p><a class="collapse-toggle-close"><code>a.collapse-toggle-close</code></a>
+            <pre><code class="language-html">&lt;div class="collapse collapsible"&gt;
+	&lt;div class="collapse-toggle"&gt;Unstyled content inside header/toggle&lt;/div&gt;
+	&lt;div class="collapse-content"&gt;
+		&lt;p&gt;Lorem ipsum.&lt;/p&gt;
+		&lt;a class="collapse-toggle-close"&gt;Close button&lt;/a&gt;
+	&lt;/div&gt;
+&lt;/div&gt;</code></pre>
+            <div class="example-box-plain">
+              <div class="collapse collapsible--aqua">
+                <div class="collapse-toggle">Collapses can be grouped</div>
+                <div class="collapse-content">
+                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In malesuada mattis euismod. In varius nisl vel ex eleifend, eget pellentesque sem feugiat. Ut tristique, augue eget pellentesque rutrum, justo nunc convallis leo, tempor rhoncus lacus metus efficitur odio. Phasellus metus erat, condimentum sit amet leo ac, viverra consectetur lorem.</p><a class="collapse-toggle-close">Close button</a>
+                </div>
+                <div class="collapse-toggle">Collapses can be grouped</div>
+                <div class="collapse-content">
+                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In malesuada mattis euismod. In varius nisl vel ex eleifend, eget pellentesque sem feugiat. Ut tristique, augue eget pellentesque rutrum, justo nunc convallis leo, tempor rhoncus lacus metus efficitur odio. Phasellus metus erat, condimentum sit amet leo ac, viverra consectetur lorem.</p><a class="collapse-toggle-close">Close button</a>
+                </div>
               </div>
             </div>
-            <div class="collapse collapsible--red">
-              <div class="collapse-toggle">Unstyled content inside <code>div.collapse-toggle</code></div>
-              <div class="collapse-content">
-                <p>Collapse structure wrapped inside <code>div.collapse.collapsible--red</code></p><a class="collapse-toggle-close"><code>a.collapse-toggle-close</code></a>
+            <pre><code class="language-html">&lt;div class="collapse collapsible--aqua"&gt;
+	&lt;div class="collapse-toggle"&gt;Collapses can be grouped&lt;/div&gt;
+	&lt;div class="collapse-content"&gt;
+		&lt;p&gt;Lorem ipsum.&lt;/p&gt;
+		&lt;a class="collapse-toggle-close"&gt;Close button&lt;/a&gt;
+	&lt;/div&gt;
+	&lt;div class="collapse-toggle"&gt;Collapses can be grouped&lt;/div&gt;
+	&lt;div class="collapse-content"&gt;
+		&lt;p&gt;Lorem ipsum.&lt;/p&gt;
+		&lt;a class="collapse-toggle-close"&gt;Close button&lt;/a&gt;
+	&lt;/div&gt;
+&lt;/div&gt;</code></pre>
+            <div class="example-box-plain">
+              <div class="collapse collapsible--green">
+                <div class="collapse-toggle">
+                  <h2>H2 Heading</h2>
+                  <p>Heading toggle can also contain formatted html.</p>
+                </div>
+                <div class="collapse-content">
+                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In malesuada mattis euismod. In varius nisl vel ex eleifend, eget pellentesque sem feugiat. Ut tristique, augue eget pellentesque rutrum, justo nunc convallis leo, tempor rhoncus lacus metus efficitur odio. Phasellus metus erat, condimentum sit amet leo ac, viverra consectetur lorem.</p><a class="collapse-toggle-close">Close button</a>
+                </div>
               </div>
             </div>
-            <section class="revealable">
-              <h3 id="h-argument-1---you-did-the-activity-that-the-dwp-says-you-didn-t-do" aria-controls="revealable-1" aria-expanded="true" tabindex="0" title="Expand section" class="revealable__heading"><i aria-hidden="true" class="revealable__icon"></i>Argument 1 - You did the activity that the DWP says you didn't do</h3>
-              <div id="revealable-1" aria-expanded="false" aria-hidden="false" class="revealable__content">
-                <p>If you did do the tasks that the DWP says you didn’t, you should ask the DWP to&nbsp;reconsider the decision to sanction you. You’ll have to give them evidence that you did the tasks. For example, a copy of your application form for a job, or a letter from a company confirming you attended training or work experience.</p><a href="#" class="revealable__close"><i aria-hidden="true" class="icon-chevron-up"></i>Close</a>
+            <pre><code class="language-html">&lt;div class="collapse collapsible--green"&gt;
+	&lt;div class="collapse-toggle"&gt;
+		&lt;h2&gt;H2 Heading&lt;/h2&gt;
+		&lt;p&gt;Heading toggle can also contain formatted html.&lt;/p&gt;
+	&lt;/div&gt;
+	&lt;div class="collapse-content"&gt;
+		&lt;p&gt;Lorem ipsum.&lt;/p&gt;
+		&lt;a class="collapse-toggle-close"&gt;Close button&lt;/a&gt;
+	&lt;/div&gt;
+&lt;/div&gt;</code></pre>
+            <div class="example-box-plain">
+              <div class="collapse collapsible--red">
+                <div class="collapse-toggle">Unstyled content inside header/toggle</div>
+                <div class="collapse-content">
+                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In malesuada mattis euismod. In varius nisl vel ex eleifend, eget pellentesque sem feugiat. Ut tristique, augue eget pellentesque rutrum, justo nunc convallis leo, tempor rhoncus lacus metus efficitur odio. Phasellus metus erat, condimentum sit amet leo ac, viverra consectetur lorem.</p><a class="collapse-toggle-close">Close button</a>
+                </div>
               </div>
-              <h3 id="h-argument-2---you-did-the-activity-that-the-dwp-says-you-didn-t-do" aria-controls="revealable-2" aria-expanded="false" tabindex="0" title="Expand section" class="revealable__heading"><i aria-hidden="true" class="revealable__icon"></i>Argument 2 - You did the activity that the DWP says you didn't do</h3>
-            </section>
+            </div>
+            <pre><code class="language-html">&lt;div class="collapse collapsible--red"&gt;
+	&lt;div class="collapse-toggle"&gt;Unstyled content inside header/toggle&lt;/div&gt;
+	&lt;div class="collapse-content"&gt;
+		&lt;p&gt;Lorem ipsum.&lt;/p&gt;
+		&lt;a class="collapse-toggle-close"&gt;Close button&lt;/a&gt;
+	&lt;/div&gt;
+&lt;/div&gt;</code></pre>
+            <div class="example-box-plain">
+              <h2>Old syntax styling</h2>
+              <section class="revealable">
+                <h3 id="heading-one" aria-controls="revealable-1" aria-expanded="true" tabindex="0" title="Expand section" class="revealable__heading">Heading one</h3>
+                <div id="revealable-1" aria-expanded="false" aria-hidden="false" class="revealable__content">
+                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In malesuada mattis euismod. In varius nisl vel ex eleifend, eget pellentesque sem feugiat. Ut tristique, augue eget pellentesque rutrum, justo nunc convallis leo, tempor rhoncus lacus metus efficitur odio. Phasellus metus erat, condimentum sit amet leo ac, viverra consectetur lorem.</p><a href="#" class="revealable__close">Close button</a>
+                </div>
+                <h3 id="heading-two" aria-controls="revealable-2" aria-expanded="false" tabindex="0" title="Expand section" class="revealable__heading">Heading two</h3>
+              </section>
+            </div>
+            <pre><code class="language-html">&lt;section class="revealable"&gt;
+	&lt;h3 id="heading-one" aria-controls="revealable-1" aria-expanded="true" tabindex="0" title="Expand section" class="revealable__heading"&gt;Heading one&lt;/h3&gt;
+	&lt;div id="revealable-1" aria-expanded="false" aria-hidden="false" class="revealable__content"&gt;
+		&lt;p&gt;Lorem ipsum.&lt;/p&gt;
+		&lt;a href="#" class="revealable__close"&gt;Close button&lt;/a&gt;
+	&lt;/div&gt;
+	&lt;h3 id="heading-two" aria-controls="revealable-2" aria-expanded="false" tabindex="0" title="Expand section" class="revealable__heading"&gt;Heading two&lt;/h3&gt;
+&lt;/section&gt;</code></pre>
           </div>
         </div>
         <section class="print-only">
