--- a/public/long-form.html
+++ b/public/long-form.html
@@ -76,7 +76,7 @@
                 </div>
               </div>
               <section id="step1">
-                <h2 id="h-what-you-could-get-from-the-airline" class="ref-heading"><span class="ref-heading__heading">First use of &lt;h2&gt; in content </span><span class="ref-heading__toggle ref-heading__toggle--on"><a href="#!" class="js-toggle-ref">Added</a></span></h2>
+                <h2 class="ref-heading"><span class="ref-heading__heading">First use of &lt;h2&gt; in content </span><span class="ref-heading__toggle ref-heading__toggle--on"><a href="#!" class="js-toggle-ref">Added</a></span></h2>
                 <h3>Example of content</h3>
                 <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.</p>
               </section>
