--- a/public/principles.html
+++ b/public/principles.html
@@ -60,11 +60,11 @@
             <h2 id="principle2">Design for inclusion</h2>
             <p>Inclusion of our two main audiences, clients and advisers, also users of varying abilities and of differing devices.</p>
             <h2 id="principle3">Design for common case (happy path)</h2>
-            <p>It’s important to remember we can’t solve all problems online, and as we see from data, most clients have multiple problems, if we can solve the most common cases online or through digital assistance then we can free. adviser time to tackle the most complex issues.</p>
+            <p>It’s important to remember we can’t solve all problems online, and as we see from data, most clients have multiple problems. If we can solve the most common cases online or through digital assistance then we can free adviser time to tackle the most complex issues.</p>
             <h2 id="principle4">Help people solve a problem (do the hard work)</h2>
-            <p>We are not wikipedia, we are not the government. Our job is to help people through the best way to problem resolution. We don’t need to explain what a benefit is, users searching will already know or will find other places that information is explained. Where possible help and show and where necessary direct.</p>
+            <p>We are not wikipedia, we are not the government. Our job is to help people through the best way to problem resolution. We don’t need to explain what a benefit is, users searching will already know or will find other places that information is explained. Where possible help and show and where necessary, direct.</p>
             <h2 id="principle5">Be honest</h2>
-            <p>Be honest, always. If a problem is going to take a long time say so. If we are trying new ways of advising say so, as for feedback, encourage engagement.</p>
+            <p>Be honest, always. If a problem is going to take a long time say so. If we are trying new ways of advising say so, ask for feedback, encourage engagement.</p>
             <h2 id="principle6">Design should be minimal/unobtrusive</h2>
             <p>Don’t get in the way, many visitors are in serious situations or difficult circumstances. Design should be used to explain or direct, it needs to be clear, simple, useful and practical not decorative or distracting.</p>
             <h2 id="principle7">Iterate based on data and feedback (not assumptions)</h2>
