--- a/public/cards.html
+++ b/public/cards.html
@@ -62,17 +62,21 @@
               <div class="example-box-plain">
                 <label>Basic card</label>
                 <div class="cards">
-                  <div class="card-img-top"><img src="assets/images/CAB-training-session.jpg" alt="Advisers being trained in a local Citizens Advice"></div>
+                  <div class="card-image-top"><img src="assets/images/CAB-training-session.jpg" alt="Advisers being trained in a local Citizens Advice"></div>
                   <div class="card-text">
                     <h3>Title</h3>
                     <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh.</p>
                   </div>
                 </div>
               </div>
-              <pre><code class="language-html">&lt;div class="callout"&gt;
-	&lt;h3&gt;Callout unstyled&lt;/h3&gt;
-	&lt;p&gt;This callout does not require an Aria tag but should be labeled with a clear heading.&lt;/p&gt;
-	&lt;p&gt;This style is used for any neutral callouts, where the information needs to be seperated from the content. It should also be used for examples.&lt;/p&gt;
+              <pre><code class="language-html">&lt;div class="cards"&gt;
+&lt;div class="card-image-top"&gt;
+&lt;img src="assets/images/CAB-training-session.jpg" alt="Advisers being trained in a local Citizens Advice"&gt;
+&lt;/div&gt;
+&lt;div class="card-text"&gt;
+	&lt;h3&gt;Title&lt;/h3&gt;
+	&lt;p&gt;Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh.&lt;/p&gt;
+&lt;/div&gt;
 &lt;/div&gt;</code></pre>
               <div class="example-box-plain">
                 <label>Landscape card</label>
@@ -91,10 +95,19 @@
                   </div>
                 </div>
               </div>
-              <pre><code class="language-html">&lt;div class="callout"&gt;
-	&lt;h3&gt;Callout unstyled&lt;/h3&gt;
-	&lt;p&gt;This callout does not require an Aria tag but should be labeled with a clear heading.&lt;/p&gt;
-	&lt;p&gt;This style is used for any neutral callouts, where the information needs to be seperated from the content. It should also be used for examples.&lt;/p&gt;
+              <pre><code class="language-html">&lt;div class="cards"&gt;
+&lt;div class="row"&gt;
+&lt;div class="span6"&gt;
+&lt;div class="card-image-left"&gt;
+&lt;img src="assets/images/CAB-training-session.jpg" alt="Advisers being trained in a local Citizens Advice"&gt;
+&lt;/div&gt;
+&lt;div class="span6"&gt;
+&lt;div class="card-text-left"&gt;
+	&lt;h3&gt;Title&lt;/h3&gt;
+	&lt;p&gt;Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh.&lt;/p&gt;
+&lt;/div&gt;
+&lt;/div&gt;
+&lt;/div&gt;
 &lt;/div&gt;</code></pre>
               <div class="example-box-plain">
                 <label>Extending </label>
@@ -122,10 +135,19 @@
                   </div>
                 </div>
               </div>
-              <pre><code class="language-html">&lt;div class="callout"&gt;
-	&lt;h3&gt;Callout unstyled&lt;/h3&gt;
-	&lt;p&gt;This callout does not require an Aria tag but should be labeled with a clear heading.&lt;/p&gt;
-	&lt;p&gt;This style is used for any neutral callouts, where the information needs to be seperated from the content. It should also be used for examples.&lt;/p&gt;
+              <pre><code class="language-html">&lt;div class="row"&gt;
+&lt;div class="span6"&gt;
+&lt;div class="cards"&gt;
+&lt;div class="card-banner-top"&gt;
+	&lt;h3&gt;Header&lt;/h3&gt;
+&lt;div class="card-image-top"&gt;
+&lt;img src="assets/images/CAB-training-session.jpg" alt="Advisers being trained in a local Citizens Advice"&gt;
+&lt;/div&gt;
+&lt;div class="card-text"&gt;
+	&lt;h3&gt;Title&lt;/h3&gt;
+	&lt;p&gt;Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh.&lt;/p&gt;
+&lt;button type="button" class="btn btn-primary right-button-icon"&gt;Continue&lt;/button&gt;
+&lt;/div&gt;
 &lt;/div&gt;</code></pre>
               <div class="example-box-plain">
                 <label>Branding </label>
@@ -156,10 +178,19 @@
                   </div>
                 </div>
               </div>
-              <pre><code class="language-html">&lt;div class="callout"&gt;
-	&lt;h3&gt;Callout unstyled&lt;/h3&gt;
-	&lt;p&gt;This callout does not require an Aria tag but should be labeled with a clear heading.&lt;/p&gt;
-	&lt;p&gt;This style is used for any neutral callouts, where the information needs to be seperated from the content. It should also be used for examples.&lt;/p&gt;
+              <pre><code class="language-html">&lt;div class="row"&gt;
+&lt;div class="span6"&gt;
+&lt;div class="cards"&gt;
+&lt;div class="card-banner-top"&gt;
+	&lt;h3&gt;Header&lt;/h3&gt;
+&lt;div class="card-image-top"&gt;
+&lt;img src="assets/images/CAB-training-session.jpg" alt="Advisers being trained in a local Citizens Advice"&gt;
+&lt;/div&gt;
+&lt;div class="card-text"&gt;
+	&lt;h3&gt;Title&lt;/h3&gt;
+	&lt;p&gt;Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh.&lt;/p&gt;
+&lt;button type="button" class="btn btn-primary right-button-icon"&gt;Continue&lt;/button&gt;
+&lt;/div&gt;
 &lt;/div&gt;</code></pre>
             </div>
           </div>
