--- a/public/search.html
+++ b/public/search.html
@@ -36,10 +36,14 @@
     <style type="text/css">
     .breadcrumb {
         font-size: 14px;
-        line-height: 30px;
-        padding: .125rem .685rem .125rem .685rem;
-        background-color: #F2F8FF;
-
+        line-height: 26px;
+        /*padding: .125rem .685rem .125rem .685rem;
+        background-color: #F2F8FF;*/
+    }
+    .breadcrumb__item > i {
+        margin-right: 0rem;
+        margin-left: 0.25rem;
+        color: #A5BDDC;
     }
     </style>
   </head>
@@ -81,7 +85,7 @@
     </nav>
     <div class="main-container">
       <nav class="main-breadcrumb">
-        <div class="main-breadcrumb__content"><span class="breadcrumb__item"><a href="index.html" title="Home">Home</a><i class="icon-guillemet-right"></i></span><span class="breadcrumb__item"><a href="#" title="Benefits">Benefits</a><i class="icon-guillemet-right"></i></span><span class="breadcrumb__item"><a href="#" title="Sick or disabled people and carers">Sick or disabled people and carers</a><i class="icon-guillemet-right"></i></span><span class="breadcrumb__item"><a href="pip-index.html" title="PIP">PIP</a><i class="icon-guillemet-right"></i></span><span class="breadcrumb__item"><a href="pip-contents.html" title="Help filling in your PIP2 form">Help filling in your PIP2 form</a><i class="icon-guillemet-right"></i></span><span class="breadcrumb__item">Q8 Dressing and undressing</span>
+        <div class="main-breadcrumb__content"><span class="breadcrumb__item"><a href="index.html" title="Home">Home</a><i class="icon-guillemet-right"></i></span><span class="breadcrumb__item"><a href="#" title="Search Results">Search Results</a><i class="icon-guillemet-right"></i></span>
         </div>
       </nav>
       <aside class="section-notice">
@@ -95,7 +99,7 @@
 
     <div class="title">
         	   
-        <h1 class="page-title">Search</h1>
+        <h1 class="page-title" style="margin-top:0em;">Search</h1>
     </div>
 
     <form method="post" action="./search_files/search.html" id="ctl02">
@@ -969,6 +973,31 @@ function __doPostBack(eventTarget, eventArgument) {
 
 </div>    
 
+<aside class="main-content__sidebar">
+                  <!-- div class="span12">
+                    <div class="cards">
+                      <div style="color:#fff; background-color:#004b88;" class="card-banner-top">
+                        <p>Header</p>
+                      </div>
+                      <div class="card-image-top"><img src="assets/images/CAB-training-session.jpg" alt="Advisers being trained in a local Citizens Advice"></div>
+                      <div class="card-text">
+                        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh.</p>
+                      </div>
+                    </div>
+                  </div-->
+                  <div class="span12">
+                    <div style="color:#fff; background-color:#57486B;" class="cards">
+                      <div class="card-banner-top">
+                        <p style="color:#fff;">Campaigns</p>
+                      </div>
+                      <!-- div class="card-image-top"><img src="assets/images/laptop-branding.png" alt="Laptop"></div -->
+                      <div class="card-text">
+                        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh.</p>
+                        <button type="button" style="background-color:#FFBF47; border-color:#FFBF47;" class="btn btn-primary right-button-icon">Continue</button>
+                      </div>
+                    </div>
+                  </div>
+</aside>
 
         </div>
 
